# evidence-aware-rag

./: .env.example  .gitignore  CONTRIBUTING.md  Makefile  README.md
.github/: CODEOWNERS  pull_request_template.md
backend/: pyproject.toml  requirements.txt
backend/app/: __init__.py  config.py  main.py
backend/app/data/stress_docs/: conflicting_policy.txt  long_doc.txt  needle_in_haystack.txt  redundant_policy.txt  sparse_policy.txt
backend/app/models/: __init__.py  schemas.py
backend/app/modules/: __init__.py
backend/app/modules/generation/: __init__.py  cheap_backend.py  expensive_backend.py  router.py
backend/app/modules/ingestion/: __init__.py  chunking.py  loaders.py  storage.py  versioning.py
backend/app/modules/observability/: __init__.py  cost.py  latency.py  retrieval_metrics.py  workspace_stats.py
backend/app/modules/retrieval/: __init__.py  embeddings.py  faiss_index.py  scoring.py
backend/app/routes/: __init__.py  chat.py  health.py  ingest.py  metrics.py  workspaces.py
backend/data/workspaces/: .gitkeep
backend/demo_data/: sample_policy.txt
backend/tests/: __init__.py  conftest.py  smoke_test_workspace_stats.py  test_workspace_stats.py
frontend/: app.py  requirements.txt
scripts/: demo_e2e.py  evaluate_retrieval_stress.py  golden_eval.json  golden_eval.yaml  run-backend.sh  run-frontend.sh  seed_stress_workspace.py  test_confidence_modes.py
